--- a/assets/css/ui.css
+++ b/assets/css/ui.css
@@ -835,6 +835,9 @@ button {
 	margin-right: 5px;
 	font-family: "NS BD", "Malgun Gothic", Dotum, "돋움", AppleGothicNeoSD, "Apple SD 산돌고딕 Neo", "굴림", arial, sans-serif !important;
 }
+.bullet__item--qna .bullet__separate {
+	margin-top: 10px;
+}
 
 .bullet__item--black {
 	color: #000;
@@ -1253,6 +1256,10 @@ button {
 }
 .table__list thead + tbody td {
 	text-align: center;
+}
+
+.table__bottom {
+	margin-top: 10px;
 }
 
 /* modal */
